[project]
name = "dl-with-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium[box2d,classic-control,mujoco]",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "livelossplot",
    "matplotlib>=3.10.1",
    "mediapy>=1.2.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
livelossplot = { git = "https://github.com/yongjincho/livelossplot", rev = "fix-max-cols" }
